src/styles/components/dialog.css
/* Dialog Window */

.dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    right: 0;
    bottom: 0;
    z-index: 101;
    transform: translate(-50%, -50%);

    background-color: var(--dialog-background-color);
    color: var(--text-color);
    border: 1px solid black;
    width: 300px;
    height: auto;
    margin: 0;

    opacity: 1;

    transition: transform 0.5s, opacity 0.75s;
}

.dialog > div.dialog-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding: 2rem;
    box-sizing: border-box;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    overflow: auto;
}

.dialog > div.dialog-content > div.dialog-text {
    height: 100%;
    position: relative;
}

.dialog button.close {
    position: absolute;
    top: 0;
    right: 0;
}

